--- a/package.json
+++ b/package.json
@@ -1,18 +1,36 @@
 {
-  "name": "init",
-  "version": "0.1.0",
+  "name": "undangan-al-novi",
+  "version": "1.0.0",
+  "homepage": "https://alramdhan.github.io/undangan-al-novi/",
   "private": true,
   "dependencies": {
+    "@babel/polyfill": "^7.12.1",
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "gh-pages": "^6.1.1",
+    "animate.css": "^4.1.1",
+    "aos": "^2.3.4",
+    "axios": "^0.24.0",
+    "bootstrap": "^5.3.3",
+    "braces": "^3.0.3",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.2",
+    "react-canvas-confetti": "^2.0.7",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
+    "sass": "^1.77.2",
+    "sweetalert2": "^11.11.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
